objects/Marketing_Request__c.object
<CustomObject>
    <fields>
        <fullName>Marketing_Cost_Rejection_Reason__c</fullName>
        <label>Marketing Cost Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Expense_Type__c</fullName>
        <label>Marketing Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard - Field Controlled</fullName>
                </value>
                <value>
                    <fullName>Co-Op - Field Controlled</fullName>
                </value>
                <value>
                    <fullName>Rewards - Marketing Controlled</fullName>
                </value>
                <value>
                    <fullName>Program &amp; Support - Marketing Controlled</fullName>
                </value>
                <value>
                    <fullName>Advertisement - Marketing Controlled</fullName>
                </value>
                <value>
                    <fullName>Tradeshows</fullName>
                    <label>Tradeshows – Sales Department</label>
                </value>
                <value>
                    <fullName>CapEx</fullName>
                </value>
                <value>
                    <fullName>New Markets</fullName>
                </value>
                <value>
                    <fullName>HR Department</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Manager_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Manager Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Project_Status__c</fullName>
        <label>Marketing Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Gathering Quotes</fullName>
                </value>
                <value>
                    <fullName>Designing</fullName>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Co-Op Invoice</fullName>
                </value>
                <value>
                    <fullName>Ordering</fullName>
                </value>
                <value>
                    <fullName>Pending with Accounting</fullName>
                    <label>Accounting</label>
                </value>
                <value>
                    <fullName>Project Completed</fullName>
                </value>
                <value>
                    <fullName>Pending Promotion Invoices</fullName>
                </value>
                <value>
                    <fullName>Request Added By RM</fullName>
                </value>
                <value>
                    <fullName>Submitted to Warehouse</fullName>
                </value>
                <value>
                    <fullName>Partially Completed</fullName>
                </value>
                <value>
                    <fullName>Completed in Full</fullName>
                </value>
                <value>
                    <fullName>RM Needs to Submit For Approval</fullName>
                </value>
                <value>
                    <fullName>To Accounting</fullName>
                </value>
                <value>
                    <fullName>Approved - Payment Pending</fullName>
                </value>
                <value>
                    <fullName>Equipment Setup</fullName>
                </value>
                <value>
                    <fullName>Pending Installation</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Pending RM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Request_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Request Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Request_Prior_Status__c</fullName>
        <label>Marketing Request Prior Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <defaultValue>&quot;Opt Out&quot;</defaultValue>
        <label>May</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mkgt_Submission_Text__c</fullName>
        <formula>&quot;The total cost of your items is&quot;  &amp; &quot; &quot; &amp; &quot;$&quot; &amp;  text(Total_Cost_of_Items__c) &amp; &quot;. Are you sure you&apos;d like to proceed?&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_and_Tier__c</fullName>
        <label>Month and Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Project_Name__c</fullName>
        <label>My Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Installer__c</fullName>
        <label>Name of Installer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Person_Requesting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Person Requesting</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dayna_Marketing_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_Help_with_Measurements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Help with Measurements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newspaper_Ad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newspaper Ad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_About_Upcoming_Event__c</fullName>
        <label>Notes About Upcoming Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>November__c</fullName>
        <defaultValue>&quot;Opt Out&quot;</defaultValue>
        <label>November</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Edits__c</fullName>
        <label>Number of Edits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October__c</fullName>
        <defaultValue>&quot;Opt Out&quot;</defaultValue>
        <label>October</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Logo__c</fullName>
        <label>Operator Logo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accel Entertainment</fullName>
                </value>
                <value>
                    <fullName>Abraham Gaming</fullName>
                </value>
                <value>
                    <fullName>Fair Share Gaming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Out_Notes__c</fullName>
        <label>Opt Out Notes</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Notes__c</fullName>
        <label>Vendor Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outdoor_Sign_Cost_Rollup__c</fullName>
        <label>Outdoor Sign Cost Rollup</label>
        <summarizedField>Marketing_Request_Products__c.Outdoor_Sign_Cost__c</summarizedField>
        <summaryForeignKey>Marketing_Request_Products__c.Marketing_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outdoor_Sign_Quantity__c</fullName>
        <label>Outdoor Sign Quantity</label>
        <summarizedField>Marketing_Request_Products__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Request_Products__c.Outdoor_Sign_Chosen__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Request_Products__c.Marketing_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outdoor_Sign_Status__c</fullName>
        <formula>If( Outdoor_Sign_Quantity__c &gt; 0,&quot;You’ve requested an Outdoor Sign.  Reminder, there can only be a concurrent maximum of 5 outdoor signs at a single video gaming location.  By selecting Save, you are confirming that the location only has a total of 5 Outdoor Signs.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outdoor Signage Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_Max__c</fullName>
        <label>Over Max</label>
        <summaryFilterItems>
            <field>Marketing_Request_Products__c.Over_Max__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Request_Products__c.Marketing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_TAT__c</fullName>
        <formula>Project_Completed_Date__c - Request_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_From_Vendor__c</fullName>
        <formula>if(and(
 NOT(ISBLANK( Date_Ordered_From_Vendor__c)),
ISBLANK( Date_Rcvd_From_Vendor__c )),
(TODAY() -  Date_Ordered_From_Vendor__c) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue From Vendor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Operator__c</fullName>
        <formula>Account__r.Partner_Operator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Operator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Memo__c</fullName>
        <label>Payment Memo</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Co_Op_Spend_Criteria__c</fullName>
        <formula>IF(
AND(
Approvals_Complete__c=TRUE,
ISBLANK(Amount_Paid_By_Accel__c),
RecordType.Name=&apos;Co-Op&apos;,
TEXT(Include_in_Co_Op_Budget__c)=&apos;Yes&apos;
),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Co-Op Spend Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personalized_Cost_Share_Rcvd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personalized Cost Share Rcvd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pickup_Location__c</fullName>
        <label>Pickup Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Pickup_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pictures_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pictures Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Event_Data_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post-Event Data Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Event_Data_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Event Data Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Event_Marketing_Promotions_Notes__c</fullName>
        <label>Pre-Event Marketing Promotions Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prize_Type_and_Cost__c</fullName>
        <label>List Out Prizes,Unit Cost,Giveaway Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prize_s__c</fullName>
        <label>Prize(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Completed_Date__c</fullName>
        <label>Project Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Due_Date__c</fullName>
        <label>Project Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Marketing Requests</relationshipLabel>
        <relationshipName>Marketing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Event Setup</fullName>
                </value>
                <value>
                    <fullName>Equipment Setup</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Pending Install</fullName>
                </value>
                <value>
                    <fullName>Project Completion</fullName>
                </value>
                <value>
                    <fullName>Complete (Vendor Invoice Pending)</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Approved - Payment Pending</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Post-Event Data</fullName>
                </value>
                <value>
                    <fullName>Event Complete</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                    <isActive>false</isActive>
                    <label>Opt Out</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>if(isblank( Project_Completed_Date__c ),&quot;Pending&quot;,&quot;Completed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Total_Cost_To_Location__c</fullName>
        <formula>IF 
(RecordType.Name =&apos;Standard&apos;, 0, 
IF(AND 
((NOT(ISBLANK(Project_Completed_Date__c))), 
RecordType.Name =&apos;Customized&apos;,Approvals_Complete__c = TRUE), ( Location_Cost_Share_Amount__c), 
IF(AND 
((NOT(ISBLANK(Project_Completed_Date__c))), 
RecordType.Name =&apos;Standard Custom Size&apos;), 0, 
IF 
(RecordType.Name =&apos;Accel Entertainment (Office Use Only)&apos;,0, 
IF(AND 
(RecordType.Name =&apos;Co-Op&apos;,Approvals_Complete__c = TRUE,Total_Reimbursed_By_Accounting__c&gt;0), (Total_Quote_Amount__c - Requested_Reimbursement_Amount__c ),
IF(AND 
((NOT(ISBLANK( Date_Check_Issued__c))), 
RecordType.Name =&apos;Co-Op&apos;,Total_Reimbursed_By_Accounting__c=0), (Total_Quote_Amount__c-Requested_Reimbursement_Amount__c ),  
IF(AND 
(RecordType.Name =&apos;Promotions&apos;,Approvals_Complete__c = TRUE),(( Total_Quote_Amount__c - Requested_Reimbursement_Amount__c)+( Location_Cost_Share_Amount__c )) , 
IF(AND 
((NOT(ISBLANK( Date_Sent_to_Accounting__c ))), 
RecordType.Name =&apos;Sweepstakes&apos;), Location_Cost_Share_Amount__c, 
0))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Total Cost To Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Total_Cost_to_Accel__c</fullName>
        <formula>/* For Standard and TouchTunes and Brand Ambassador Events record types, takes the Total Cost of Items */
IF(AND(OR 
(RecordType.Name =&apos;Standard&apos;,RecordType.Name =&apos;AE Player TV&apos;,RecordType.Name =&apos;Brand Ambassador Events&apos;), Approvals_Complete__c = TRUE), Total_Cost_of_Items__c, 

/* For Customized where approvals are complete and project is marked completed. Takes the Vendor Amount minus the location share amount. */
IF(AND 
((NOT(ISBLANK( Project_Completed_Date__c ))), 
RecordType.Name =&apos;Customized&apos;,Approvals_Complete__c = TRUE), ( Winning_Bid_Amount__c - Location_Cost_Share_Amount__c ), 

/* For Standard Custom Size, wherein all approvals are complete and the project completed date is filled out. Takes the Vendor Amount */
IF(AND(OR  
(RecordType.Name =&apos;Standard Custom Size&apos;,RecordType.Name =&apos;Accel Entertainment (Office Use Only)&apos;),Approvals_Complete__c = TRUE), Winning_Bid_Amount__c, 

/* For historical co-op requests from CRM, which will not have a &quot;total reimbursed by accounting&quot;, therefore the date check issued would be filled out. Takes the Requested Reimbursement Amount. */
IF(AND
((NOT(ISBLANK( Date_Check_Issued__c ))), 
RecordType.Name =&apos;Co-Op&apos;, Date_Check_Issued__c &lt; DATEVALUE(&quot;2018-08-01&quot;)), Requested_Reimbursement_Amount__c ,


/* For Co-Ops, wherein Accounting has reimbursed greater than zero amt, takes the total reimbursed by Accounting. */ 
IF(AND 
(RecordType.Name =&apos;Co-Op&apos;,Total_Reimbursed_By_Accounting__c&gt;0), Total_Reimbursed_By_Accounting__c , 



/* For Promotions, if approvals are all complete, takes the requested reimbursement amount plus the accel portion of cost share (to accomodate both reimbursements and split costs items within the promotion. */ 
IF(AND 
(RecordType.Name =&apos;Promotions&apos;,Approvals_Complete__c = TRUE),( Requested_Reimbursement_Amount__c + Accel_Portion_of_Cost_Share__c ), 

/* For sweepstakes. &quot;Date sent to Accounting&quot; denotes approval by Accounting. Takes the Total Cost of Items and subtracts the locations cost share where applicable. */
IF(AND 
((NOT(ISBLANK( Date_Sent_to_Accounting__c))), 
RecordType.Name =&apos;Sweepstakes&apos;,( Total_Cost_of_Items__c- Location_Cost_Share_Amount_Rollup__c )&gt;0),( Total_Cost_of_Items__c- Location_Cost_Share_Amount_Rollup__c ), 
0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Total Cost to Accel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Budget_Spend__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Budget Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Spend_at_time_of_request__c</fullName>
        <label>Projected Spend (at time of request)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_End_Date_Fx__c</fullName>
        <description>Formula field pulls in Promo End Date in order to duplicate the data on the page layout</description>
        <formula>Promo_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promo End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_End_Date__c</fullName>
        <label>Promo End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_ID__c</fullName>
        <displayFormat>P-{0000}</displayFormat>
        <label>Promo ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Promo_Location__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promo Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Path_Stages__c</fullName>
        <label>Promo Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Pending Invoice</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Start_Date_Fx__c</fullName>
        <description>Formula field pulls in Promo Start Date in order to duplicate the data on the page layout</description>
        <formula>Promo_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promo Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Start_Date__c</fullName>
        <label>Promo Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotion Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Sub_ID__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Promotion Sub ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other (Location Made Up Their Own Promo)</fullName>
                </value>
                <value>
                    <fullName>Bundle of Giveaways</fullName>
                </value>
                <value>
                    <fullName>Every Day Giveaway</fullName>
                </value>
                <value>
                    <fullName>Finalist Giveaway</fullName>
                </value>
                <value>
                    <fullName>Grand Prize Giveaway</fullName>
                </value>
                <value>
                    <fullName>Players Choice Giveaway</fullName>
                </value>
                <value>
                    <fullName>Progressive Jackpot</fullName>
                </value>
                <value>
                    <fullName>Giveaway on Sweepstakes Tablet</fullName>
                </value>
                <value>
                    <fullName>Weekly Giveaway</fullName>
                </value>
                <value>
                    <fullName>Hot Seat</fullName>
                </value>
                <value>
                    <fullName>Plinko</fullName>
                </value>
                <value>
                    <fullName>Spin the Wheel</fullName>
                </value>
                <value>
                    <fullName>Punch Cards</fullName>
                </value>
                <value>
                    <fullName>Scratch Off Cards</fullName>
                </value>
                <value>
                    <fullName>AE.BET Game</fullName>
                </value>
                <value>
                    <fullName>Baseball</fullName>
                </value>
                <value>
                    <fullName>Basketball</fullName>
                </value>
                <value>
                    <fullName>Football</fullName>
                </value>
                <value>
                    <fullName>Generic Giveaway</fullName>
                </value>
                <value>
                    <fullName>Spring Giveaway</fullName>
                </value>
                <value>
                    <fullName>Summer Giveaway</fullName>
                </value>
                <value>
                    <fullName>Autumn Giveaway</fullName>
                </value>
                <value>
                    <fullName>Winter Giveaway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion_is_Paid__c</fullName>
        <description>indicates when a marketing reimbursement of record type Promotion is paid</description>
        <formula>if(

and(
 RecordType.DeveloperName = &quot;Promotions&quot;,

or(
and( Requested_Reimbursement_Amount__c &gt; 0,  Total_Cost_Share_Amount__c &gt;0, Total_Reimbursed_By_Accounting__c &gt;0,not(isblank( Deduction_End_Date__c ))),

and( Requested_Reimbursement_Amount__c &gt; 0,  Total_Cost_Share_Amount__c =0, Total_Reimbursed_By_Accounting__c &gt;0),

and( Requested_Reimbursement_Amount__c = 0,  Total_Cost_Share_Amount__c &gt;0, not(isblank( Deduction_End_Date__c )))

)
),

TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion is Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_will_run_on_Sweepstakes_Tablet__c</fullName>
        <label>Promotion will run on Sweepstakes Tablet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_of_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box only upon uploading a copy of paid invoice.</inlineHelpText>
        <label>Submit Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proofreader_Approver__c</fullName>
        <label>Proofreader Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <formula>if(Approvals_Complete__c,  &quot;PO&quot; &amp; Name , &quot;Awaiting Approvals&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_1_Bid__c</fullName>
        <label>Quote #1 Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_1_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote #1 Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Marketing_Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing Requests (Quote #1 Vendor)</relationshipLabel>
        <relationshipName>Marketing_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_2_Bid__c</fullName>
        <label>Quote #2 Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_2_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote #2 Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Marketing_Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing Requests (Quote #2 Vendor)</relationshipLabel>
        <relationshipName>Marketing_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_From_Vendor__c</fullName>
        <label>Quote # (From Vendor)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Notes__c</fullName>
        <label>Quote Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Stage_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Stage Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_TAT__c</fullName>
        <formula>Date_Quote_1_Finalized__c-Date_Sent_for_Quote_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote #</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Detail_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Detail Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reimbursement_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is auto checked by automation if reimbursement has marketing record type and &apos;Paid&apos; status</description>
        <label>Reimbursement Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <formula>Account__r.Relationship_Manager__r.FirstName +&quot; &quot;+Account__r.Relationship_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Forms_Signed_and_Saved_to_Server__c</fullName>
        <label>Release Forms Signed and Saved to Server</label>
        <type>Date</type>
    </fields>
</CustomObject>